# VisLang

./: .gitmodules  CLAUDE.md  LICENSE  README.md  benchmark.py  pipeline.py  pipeline2.ipynb  pyproject.toml  requirements.txt
data/: aircraft.json  synthetic_books.json  synthetic_sensors.json
docs/: DESIGN.md
example-visualizations/skull/: ColorMaps.json  skull-vis-dsl.py  skull-vis-vista.py  skull-vis.py  skull.nhdr
generatedViz/: run_results.json
generatedViz/specs/: aircraft__generic_auto_2d.json  aircraft__generic_best_pattern.json  aircraft__generic_ranking.json  aircraft__generic_relationship.json  population__generic_auto_2d.json  population__generic_best_pattern.json  population__generic_category_comparison.json  population__generic_ranking.json  population__generic_relationship.json  synthetic_books__generic_best_pattern.json  synthetic_books__generic_category_comparison.json  synthetic_books__generic_ranking.json  synthetic_books__generic_relationship.json  synthetic_sensors__generic_auto_2d.json  synthetic_sensors__generic_best_pattern.json  synthetic_sensors__generic_relationship.json
logs/2026-02-27_185349_cars-hp-mpg/: baseline_log.md  comparison.md  draco_input.json  draco_log.md  draco_output.json  meta.json  with_draco.vl.json  without_draco.vl.json
logs/2026-02-27_191514_cars-efficiency-origin-engine/: baseline_log.md  comparison.md  draco_enhanced_log.md  draco_input.json  draco_output.json  (+4 more)
output/: cars-efficiency-origin-engine.ipynb  cars-hp-mpg.ipynb
prompts/: prompts.json
tools/: __init__.py  pipeline.py  prompts.py  vislang.py
(+170 files in other folders)
